fruit enum
